--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.9.4",
     "next": "15.1.4",
     "openai": "^4.78.1",
     "react": "^19.0.0",
